--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=DHT sensor library
-version=1.4.1
-author=Adafruit
-maintainer=Adafruit <info@adafruit.com>
-sentence=Arduino library for DHT11, DHT22, etc Temp & Humidity Sensors
-paragraph=Arduino library for DHT11, DHT22, etc Temp & Humidity Sensors
-category=Sensors
-url=https://github.com/adafruit/DHT-sensor-library
+name=Mastermino
+version=1.0.0
+author=marqdevx
+maintainer=marqdevx <>
+sentence=Classic game Mastermind for Arduino boards
+paragraph=Play to the classic gam Mastermind, build your projects with this handy code
+category=
+url=https://github.com/marqdevx/Mastermino
 architectures=*
-depends=Adafruit Unified Sensor
+depends=
