--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -49,6 +49,7 @@ jobs:
             # Install library dependencies.
             - name: Adafruit SSD1306
             - name: Adafruit GFX Library
+            - name: Adafruit NeoMatrix
             - name: RotaryEncoder
           sketch-paths: |
             - './examples/game_matrix_rotary'
